Question 2 * add index and more header links * remove unnecessary code for old plots * add more explanations of code

--- a/main.Rmd
+++ b/main.Rmd
@@ -5,9 +5,18 @@ date: "2022-11-20"
 author: "Jonas Barth, Mattia Castaldo, Matteo Migliarino"
 ---
 
-# 2. Differential Privacy
+# Index
 
-# 2.1 Univariate Differential Privacy
+-   [Stat4Race](#1.-stat4race)
+-   [Differential Privacy](#2.-differential-privacy)
+    -   [Univariate Differential Privacy](#2.1.-univariate-differential-privacy)
+    -   [Sampling from a different distribution](#2.2.-sampling-from-a-different-distribution)
+    -   [Privatised Dataset](#2.3.-privatised-dataset)
+    -   [Bonus Question](#2.4.-bonus-question)
+
+# 2. Differential Privacy {#2.-differential-privacy}
+
+# 2.1. Univariate Differential Privacy {#2.1.-univariate-differential-privacy}
 
 Index
 
@@ -52,7 +61,7 @@ plot(original_hist,
      main = paste("Histogram of", n ,"samples from a Beta(10, 10) distribution"))
 ```
 
-### Perturbed Histogram
+### Perturbed Histogram {#perturbed-histogram}
 
 Since we have to create many perturbed histograms, we will put this logic into a function for reusability.
 
@@ -179,21 +188,12 @@ sim_data
 
 ## Plotting {#plotting}
 
-### Absolute MISE Differences
-
-We want to show how the absolute difference between the two calculated $MISE$ values varies across the different combinations of hyper parameters.
-
-#### Preparing Data for Plotting
-
-There are 3 steps in the data preparation process:
-
-1.  Calculate the absolute difference between the two $MISE$ values.
-2.  Group the data by epsilon value, sample size (n), and number of bins.
-3.  Get a subset for each possible (sample size, epsilon) pair. Four in total.
+### Preparing Data for Plotting
+We want to group the data by epsilon value, sample size (n), and number of bins, so that we can plot the MISE values as a function of the number of bins.
 
 ```{r}
 
-# 2. group data
+# group data
 mise_data_group <- sim_data %>%
   group_by(eps, n, bins) %>%
   dplyr::summarize(mise_original_mean = mean(mise_original),
@@ -205,21 +205,12 @@ mise_data_group <- sim_data %>%
   as.data.frame()
 ```
 
-#### Parameters for plotting
+### Function for a single plot
 
-```{r}
-colours = rainbow_hcl(2)
-lwd = 4
-legend_names = c("n = 100, eps = 0.1", "n = 100, eps = 0.001", "n = 1000, eps = 0.1", "n = 1000, eps = 0.001")
-```
+This function plots a line plot with two lines:
 
-### Original Mise Variation
-
-In the 4 plots below we see the average: \* MISE value for the original histogram. \* MISE value for the perturbed histogram. \* Absolute difference between the MISE for the original histogram and MISE for the perturbed histogram.
-
-#### Function for a single plot
-
-This function plots a line plot with three lines: \* mean of the original MISE \* mean of the perturbed MISE \* mean of the MISE difference
+-   mean of the original MISE.
+-   mean of the perturbed MISE.
 
 ```{r}
 plot_mise_values = function(mise_data, main, sub, colours, lwd = 3) {
@@ -237,10 +228,12 @@ plot_mise_values = function(mise_data, main, sub, colours, lwd = 3) {
 }
 ```
 
-#### Plotting
+### Plotting
+
 The 4 plots below show the:
-* original $MISE$
-* perturbed $MISE$
+
+-   $MISE$ value for the original histogram.
+-   $MISE$ value for the perturbed histogram.
 
 for the 4 combinations of the sample sizes $n \: \in \: \{100, 1000}$ and the epsilon values $\epsilon \: \in \{0.001, 0.1\}$.
 
@@ -299,6 +292,12 @@ plot_mise_lines(mise_data_group, n = n_values, eps = eps_values)
 
 # 2.2 Sampling from a different distribution
 
+## Index
+
+-   [Perturbed Histogram](#perturbed-histogram)
+-   [Run Simulation](#run-simulation)
+-   [Plotting](#2.2.-plotting)
+
 We now sample from: $$
 p_X(x) = \pi \cdot \text{dbeta}(x | \alpha_1, \beta_1) + (1 -\pi )\cdot \text{dbeta}(x | \alpha_2, \beta_2)
 $$
@@ -318,7 +317,7 @@ h_perturbed=l_perturbe(h)
 plot(h_perturbed, main='Perturbed Histogram of p[X]', xlab='', freq=F)
 ```
 
-## Run Simulation
+## Run Simulation {#run-simulation}
 
 We will run the simulation with the same parameters for $n$, $\epsilon$ and $m$ and for the same number of times $M$. We also have $\pi \; \epsilon \; \{0.25, 0.5, 0.75\}$ as an additional parameter.
 
@@ -341,16 +340,16 @@ for (n in n_values) {
 }
 ```
 
-## Plotting
+## Plotting {#2.2.-plotting}
 
 Like in the plots for question 2.1, we will show how the two calculated $MISE$ values vary across the different combinations of hyper parameters.
 
-
 ### Group Data
+
 First, we group the data, however this time we also group on $\pi$ in addition to the other parameters.
 
 ```{r}
-# 2. group data
+# group data
 mise_data_group_pi <- out_new %>%
   group_by(eps, n, bins, pi) %>%
   dplyr::summarize(mise_original_mean = mean(mise_original),
@@ -373,19 +372,27 @@ pi_075 = subset(mise_data_group_pi, mise_data_group_pi$pi == 0.75)
 ```
 
 ### Plot pi = 0.25.
+
 ```{r}
 plot_mise_lines(pi_025, n_values, eps_values, pi = 0.25)
 ```
+
 ### Plot pi = 0.5.
+
 ```{r}
 plot_mise_lines(pi_05, n_values, eps_values, pi = 0.5)
 ```
+
 ### Plot pi = 0.75.
+
 ```{r}
 plot_mise_lines(pi_075, n_values, eps_values, pi = 0.75)
 ```
+
 ## 2.4 Bonus
+
 We want to perform some simulations to test whether our mechanism ensures $\epsilon$ differential privacy:
+
 ```{r}
 n.sim = 100
 ratio = numeric(n.sim)
@@ -403,4 +410,5 @@ for (i in 1:n.sim) {
 }
 sum(ratio <= exp(eps)) / n.sim
 ```
+
 #### TODO : for some reasone it appears that differential privacy isn't always ensured?
