improved printing layout

--- a/Stat4Race.Rmd
+++ b/Stat4Race.Rmd
@@ -3,8 +3,8 @@ title: "Stat4Race"
 output:
   html_document:
     df_print: paged
-  html_notebook: default
   pdf_document: default
+  html_notebook: default
 editor_options: 
   markdown: 
     wrap: sentence
@@ -15,9 +15,9 @@ Look at colab [link](https://colab.research.google.com/drive/1CMkKzX2K0-l90rAZXl
 ### Requirements
 
 ```{r}
-install.packages('foreach')
-install.packages('doParallel')
-install.packages('dplyr')
+#install.packages('foreach')
+#install.packages('doParallel')
+#install.packages('dplyr')
 
 library(foreach)
 library(iterators)
@@ -82,6 +82,7 @@ hist(T_var,
      breaks = 1:100000, 
      xlim=c(1,30), 
      prob=T,
+     border='white',
      main = '10K samples simulation vs T')
 curve(1/x/(x+1), 
       col='orange', 
@@ -105,7 +106,7 @@ set.seed(13112221)
 
 M = 10^(2:7)
 n.threads = 10
-n.simulations = 8
+n.simulations = 1
 df = data.frame()
 
 for(i in 1:n.simulations) {
@@ -125,7 +126,7 @@ df
 ```
 
 We can then compute some summaries over our simulations:
-```{r}
+```{r echo=FALSE, results='hide',message=FALSE}
 # read summaries from simulations on Google Colab
 df = read.csv('simulations.csv') 
 summaries <- df %>%
@@ -144,7 +145,7 @@ summaries
 
 This is the **mean** of the values, and as we can expect (since $\mathbb{E}T \to \infty$) it tends to grow as the size of the simulation grows:
 
-```{r}
+```{r echo=FALSE, results='hide',message=FALSE}
 plot(
     summaries[c('size', 'expected')],
     type = "l", 
@@ -156,9 +157,11 @@ plot(
     main='Mean per size of input')
 
 ```
+
+
 This is the time it takes, vs some linear function:
 
-```{r}
+```{r echo=FALSE, results='hide',message=FALSE}
 plot(
     x = summaries$size,
     y = summaries$median_time,
@@ -175,5 +178,11 @@ legend('topleft',
        col = c('black', 'orange'),
        lwd=4)
 
+```
+
+
+Finally: our entry to try to win the 1kg gelato:
+```{r echo=FALSE}
+summaries[c('size', 'median_time')]
 ```
 
