--- a/main.Rmd
+++ b/main.Rmd
@@ -2,7 +2,7 @@
 title: "main"
 output: html_document
 date: "2022-11-20"
-author: "Jonas Barth, Mattia Castaldo, Matteo Migliarino"
+author: "Jonas Barth, Mattia Castaldo, Matteo Migliarini"
 ---
 
 # 2. Differential Privacy
@@ -41,7 +41,7 @@ m = n^(1 / (2 + 1))
 
 The original histogram is sampled from a $Beta$ distribution with $\alpha = 10, \beta = 10$.
 
-```{r}
+```{r echo=FALSE}
 b_sample = rbeta(n=n, 10, 10)
 
 original_hist = hist(b_sample, plot=F, breaks=m-1)
@@ -49,6 +49,8 @@ original_hist = hist(b_sample, plot=F, breaks=m-1)
 plot(original_hist,
      xlab = NULL,
      ylab = NULL,
+     col='red',
+     border='white',
      main = paste("Histogram of", n ,"samples from a Beta(10, 10) distribution"))
 ```
 
@@ -85,11 +87,21 @@ l_perturbe = function(h, variance = 8 / (0.001 ^ 2)) {
 
 Plot the peturbed histogram. We can see that it is more sparse than the original histogram.
 
-```{r}
+```{r echo=FALSE}
 perturbed_hist = l_perturbe(original_hist, variance = 8 / (eps^2))
+plot(original_hist, 
+     freq=F, 
+     main='Perturbed Histogram vs Original',
+     col=rgb(1,0,0),
+     border='white')
 plot(perturbed_hist,
      freq=F,
-     main='Perturbed Histogram')
+     add=T, col=rgb(0,0,1,0.5),border='white')
+legend('topright',
+       legend=c('Original', 'Perturbed', ' Intersection'),
+       col=c(rgb(1,0,0), rgb(0,0,1,0.5), rgb(.5,0,1)),
+       lwd = 10
+)
 ```
 
 ## Simulation {#simulation}
@@ -299,10 +311,21 @@ plot(h, main='Density of
 
 ## Perturbed Histogram
 
-```{r}
+```{r echo=FALSE}
 h_perturbed=l_perturbe(h)
 
-plot(h_perturbed, main='Perturbed Histogram of p[X]', xlab='', freq=F)
+plot(h, 
+     freq=F, 
+     main='Perturbed Histogram vs Original',
+     col=rgb(1,0,0),
+     border='white', xlab='')
+plot(h_perturbed,
+     freq=F,
+     add=T, col=rgb(0,0,1,0.5),border='white')
+legend('topright',
+       legend=c('Original', 'Perturbed', ' Intersection'),
+       col=c(rgb(1,0,0), rgb(0,0,1,0.5), rgb(.5,0,1)),
+       lwd = 10)
 ```
 
 ## Run Simulation
@@ -412,7 +435,7 @@ ratio = numeric(n.sim)
 eps = .1
 
 for (i in 1:n.sim) {
-  h = hist(rbeta(100000,10,10), breaks=10,plot=F)
+  h = hist(rbeta(1e5,10,10), breaks=floor(1e5^(1/3)),plot=F)
   h$density = h$density/2
   h_p = l_perturbe(h,variance=8/eps^2)
 
