--- a/Ex3.Rmd
+++ b/Ex3.Rmd
@@ -2,6 +2,7 @@
 title: "Exercise 3"
 output: html_notebook
 ---
+
 ```{r}
 require('VGAM') # for sampling from a laplace
 require("dplyr") # for using group by on the data from the simulation
@@ -9,12 +10,13 @@ require("colorspace") # for plotting
 require("latex2exp") # for mathematical expressions in plots
 ```
 
-
-
 # 3 Data collection
 
-For this exercise we decided to carry out an analysis of alcohol consumption during the weekend on average. To do this we created a form on Google asking a simple question: "How much do you spend on drinks at the weekend ?" and shared it with our friends and acquaintances collecting a total of 80 answers. At this point we privatized the data collection using the perturbed histogram approach. We chose the following parameters: $$ \normalsize m=n^{d/(2+d)}\;, where\; \textbf{n}\; is\; the\;sample\;size\;(in\;this\;case\;it \;is\; 80)\\ \large\epsilon = \normalsize0.1 \;we\;chose\;this\; \large\epsilon \;\normalsize \;so\; that\; the\; data\; would\; be\; quite\; privatized,\; but\; without\; losing \; the\; relevant\; statistics\;adding\;too\;much\;noise\\k=80 \; the\; number\; of\; samples\; got\; from\; the\; perturbed\; histogram
-$$
+For this exercise we decided to carry out an analysis of alcohol consumption during the weekend on average. To do this we created a form on Google asking a simple question: "How much do you spend on drinks at the weekend ?" and shared it with our friends and acquaintances collecting a total of 80 answers. At this point we privatized the data collection using the perturbed histogram approach. We chose the following parameters:
+
+-   $m=n^{d/(2+d)}$ where $n$ is the sample size (in this case it is 80)
+-   $epsilon =0.1$ we chose this $epsilon$ so that the data would be quite privatized, but without losing the relevant statistics adding too much noise
+-   $k=80$ the number of samples got from the perturbed histogram equal to $n$
 
 ```{r}
 dataframe <- read.csv('Survey.csv') ## read rhe dataframe created from the survey
@@ -49,11 +51,10 @@ sample_survey_hist <- (sample(survey_perturbe$breaks,k,replace=T)) ## sampling f
 dataframe_perturbe <- data.frame(people=seq(1,k),money=sample_survey_hist) ## create the new dataframe privatized
 write.csv(dataframe_perturbe,'Priv_Data',row.names = F) # save the new dataframe in a csv file
 ```
+
 What happen upon privatization? Well, the new dataset created via the perturbed histogram will present new values for each respondent making it impossible to determine who said what. However, the main satistics/summaries are preserved net of a small loss.
 
 ```{r}
 df_perturbed=read.csv('Priv_Data')
 summary(df_perturbed)
 ```
-
-
