--- a/Ex3.Rmd
+++ b/Ex3.Rmd
@@ -15,7 +15,7 @@ require("latex2exp") # for mathematical expressions in plots
 For this exercise we decided to carry out an analysis of alcohol consumption during the weekend on average. To do this we created a form on Google asking a simple question: "How much do you spend on drinks at the weekend ?" and shared it with our friends and acquaintances collecting a total of 80 answers. At this point we privatized the data collection using the perturbed histogram approach. We chose the following parameters:
 
 -   $m=n^{d/(2+d)}$ where $n$ is the sample size (in this case it is 80)
--   $epsilon =0.1$ we chose this $epsilon$ so that the data would be quite privatized, but without losing the relevant statistics adding too much noise
+-   $\epsilon =0.1$ we chose this $\epsilon$ so that the data would be quite privatized, but without losing the relevant statistics adding too much noise
 -   $k=80$ the number of samples got from the perturbed histogram equal to $n$
 
 ```{r}
