--- a/main.Rmd
+++ b/main.Rmd
@@ -81,7 +81,7 @@ If now want to analyze this function we can notice a few things:
 
 We can now confront the output of our simulation with the $pdf$ of T, noticing that there's a good similarity between the two:
 
-```{r}
+```{r echo=FALSE}
 set.seed(2008201)
 
 T_var = sim(10000)
@@ -98,7 +98,7 @@ set.seed(13112221)
 
 M = 10^(2:7)
 n.threads = 10
-n.simulations = 8
+n.simulations = 1
 df = data.frame()
 
 for(i in 1:n.simulations) {
@@ -119,7 +119,7 @@ df
 
 We can then compute some summaries over our simulations:
 
-```{r}
+```{r echo=FALSE}
 # read summaries from simulations on Google Colab
 df = read.csv('simulations.csv') 
 
@@ -138,7 +138,7 @@ summaries
 
 This is the **mean** of the values, and as we can expect (since $\mathbb{E}T \to \infty$) it tends to grow as the size of the simulation grows:
 
-```{r}
+```{r echo=FALSE, results='hide',message=FALSE}
 plot(
     summaries[c('size', 'expected')],
     type = "l", 
@@ -153,18 +153,29 @@ plot(
 
 This is the time it takes, vs some linear function:
 
-```{r}
+```{r echo=FALSE, results='hide',message=FALSE}
 plot(
-    summaries[c('size', 'median_time')],
+    x = summaries$size,
+    y = summaries$median_time,
     type = "l", 
-    log='x',
+#    log='x',
     lwd=5, 
-    col='orchid', 
+    col='orange', 
     xlab='Population Size', 
     ylab='time [s]', 
     main='Time per size of input')
-curve(x/1e5, add=T, lwd=1, type='p', from=min(df$size), to=max(df$size))
+curve(x*3.7e-6, lwd=2, add=T, type='l', lty='dotdash', from=min(df$size), to=max(df$size))
+legend('topleft',
+       legend = c('linear time','simulation time'),
+       col = c('black', 'orange'),
+       lwd=4)
+
 ```
+
+Finally: our entry to try to win the 1kg gelato:
+```{r echo=FALSE}
+summaries[c('size', 'median_time')]
+``` 
 
 # 2. Differential Privacy {#2.-differential-privacy}
 
